--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <!-- Remove before pushing live -->
     <meta name="robots" content="noindex">
+    <base href="https://thorstenbell.github.io/heco-react-ghpages/">
+
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
@@ -30,7 +32,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
